# talk-llama.cpp

./: CMakeLists.txt  build-xcframework.sh
llama/: CMakeLists.txt
